Cahnges to avoid discrepancies
Owner requested to erase all the information

--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
     />
-    <title>Dr Pepe 2022</title>
+    <title>Pepe 2022</title>
   </head>
   <body class="bg-light">
     <div class="container">
       <br />
-      <h1 class="display-1 text-center"><b>🩺 Dr Pepe 2022 🩺</b></h1>
+      <h1 class="display-1 text-center"><b>Próximamente</b></h1>
       <br />
-      <p class="display-3 text-center">Bienvenidos al sitio oficial del</p>
-      <p class="display-3 text-center"><b>Dr. José F. Salazar Castillo</b></p>
-      <p class="display-1 text-center">Medicina General y Deportiva</p>
+      <h3>Bolsas y Abrigos</h3>
       <br />
     </div>
   </body>
